	  torrent creation
	* Fix crash in Windows when creating a torrent
	* Add button to Other preferences to associate magnet links with Deluge
	* Fix uploading plugins when the daemon is not localhost
	* Fix #692 no longer require tray password when quitting from the tray icon
	  while the window is visible.
	* Fix #782 do not ask for tray password when window is not minimized to tray

==== Console ====
	* Fix using the console in Windows, but only in command-line mode

==== Label ====
	* Fix #1085 only use ints for specific options to prevent unhandled exception

==== Execute ====
	* Use the move_completed path if it is different to the save path
	  in the completed event.

==== Core ====
	* Fix the upload_plugin rpc method (was still using XML-RPC stuff)
	* Fix possible exception when upgrading from a 0.5 state file

=== Deluge 1.2.0_rc4 (24 November 2009) ===
==== Core ====
	* Fix deleting old .fastresume files with fresh configs
	* Fix files list when using magnet uris
	* Fix loading the saved metadata when loading state with magnet uris

==== GtkUI ====
	* Fix showing the 'Other' speed dialogs in Windows
	* Fix adding torrents from the Queued Torrents dialog
	* Fix disabling/enabling plugins after switching daemons
	* Reduce height of Add Torrent Dialog by ~80 pixels
	* Fix #1071 issue where Deluge will fail to start if there is a stale ipc lockfile
	* Fix autoconnecting to the next host in the list if the selected one isn't available
	* Fix endless loop when trying to autoconnect to an offline daemon
	* Fix exception on startup when the system tray icon is not enabled
	* Fix issue where some torrents with special characters could not be added
	* Fix issues adding magnet uris

==== Web ====
	* Fix installing the deluge-web manpage
	* Escape hyphens in the manpage

==== Console ====
	* Escape hyphens in the manpage
	* Make the delete key work
	* Allow ~ to be used in the path in the add command
	* Allow commands that are .pyc files to be used