@@ -23,6 +23,7 @@
 	* Fix #692 no longer require tray password when quitting from the tray icon
 	  while the window is visible.
 	* Fix #782 do not ask for tray password when window is not minimized to tray
+	* Fix #1036 autoconnecting to localhost daemon on start-up
 
 ==== Console ====
 	* Fix using the console in Windows, but only in command-line mode
